<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyClock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AddAlarm">添加闹钟</string>
    <string name="play_sound">Play sound</string>
    <string name="_">撤销</string>
    <string name="start">Start</string>
    <string name="Pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>

</resources>
